# Discove

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Readme.md  build.ps1  build.sh  debug.ps1  debug.sh
assets/emojis/: mappings.json
cmake/: GenerateFontHeaders.cmake  generate_font_header.py
include/data/: Database.h
include/models/: Attachment.h  Channel.h  Embed.h  Emoji.h  Guild.h  GuildFolder.h  GuildInfo.h  GuildMember.h  Member.h  Message.h  PermissionOverwrite.h  Presence.h  Reaction.h  Role.h  StickerItem.h  User.h
include/net/: APIClient.h  Gateway.h
include/router/: Route.h  Router.h  Screen.h  Transition.h
include/screens/: HomeScreen.h  LoadingScreen.h  LoginScreen.h  MainLayoutScreen.h  NotFoundScreen.h  ProfileScreen.h  SettingsScreen.h  UILibraryScreen.h
include/state/: AppState.h  Store.h
include/ui/: AnimationManager.h  EmojiManager.h  GifAnimation.h  GuildBar.h  IconManager.h  LayoutConstants.h  RoundedButton.h  RoundedWidget.h  Theme.h  VirtualScroll.h
include/ui/components/: ChannelPlaceholder.h  DMSidebar.h  GuildBar.h  GuildFolderWidget.h  GuildIcon.h  GuildSidebar.h  MessageWidget.h  ProfileBubble.h  Sidebar.h  TextChannelView.h
include/utils/: CDN.h  Fonts.h  Images.h  Logger.h  Permissions.h  Protobuf.h  Secrets.h  Time.h  Uuid.h
src/: main.cpp
src/data/: Database.cpp
src/models/: Attachment.cpp  Channel.cpp  Embed.cpp  Emoji.cpp  Guild.cpp  GuildFolder.cpp  GuildMember.cpp  Member.cpp  Message.cpp  PermissionOverwrite.cpp  Presence.cpp  Reaction.cpp  Role.cpp  StickerItem.cpp  User.cpp
src/net/: APIClient.cpp  Gateway.cpp
src/router/: Route.cpp  Router.cpp  Screen.cpp  Transition.cpp
src/screens/: HomeScreen.cpp  LoadingScreen.cpp  LoginScreen.cpp  MainLayoutScreen.cpp  NotFoundScreen.cpp  ProfileScreen.cpp  SettingsScreen.cpp  UILibraryScreen.cpp
src/state/: Store.cpp
src/ui/: AnimationManager.cpp  EmojiManager.cpp  GifAnimation.cpp  IconManager.cpp  RoundedButton.cpp  RoundedWidget.cpp  Theme.cpp  VirtualScroll.cpp
src/ui/components/: ChannelPlaceholder.cpp  DMSidebar.cpp  GuildBar.cpp  GuildFolderWidget.cpp  GuildIcon.cpp  GuildSidebar.cpp  MessageWidget.cpp  ProfileBubble.cpp  Sidebar.cpp  TextChannelView.cpp
src/utils/: CDN.cpp  Fonts.cpp  Images.cpp  Logger.cpp  Permissions.cpp  Protobuf.cpp  Secrets.cpp  Time.cpp  Uuid.cpp
vcpkg-overlays/fltk/: portfile.cmake  vcpkg.json
